<resources>
    <string name="app_name">Beehive</string>
    <string name="app_name_longer">Beehive Mobile</string>
    <string name="app_sub_info">companion to web platform</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- navigation side menu -->
    <string name="action_dashboard">Home</string>
    <string name="action_connect">Connect App</string>
    <string name="action_study">Experiment Info</string>
    <string name="more">more</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh Stats</string>
    <string name="action_about">About</string>

    <string name="info_experiment">Experiment details.</string>

    <!-- experiment details view -->
    <string name="study_code">Experiment Code</string>
    <string name="study_title">Title</string>
    <string name="study_start">Start Date</string>
    <string name="study_end">End Date</string>
    <string name="study_code_placeholder">study code given by researcher</string>
    <string name="study_title_placeholder">study title</string>
    <string name="end_date_placeholder">start date of study will appear here.</string>
    <string name="start_date_placeholder">end date of study will appear here.</string>

    <string name="desc_about">Beehive Android is the mobile app companion to Beehive platform, a web system for researchers to
        design behavioral experiments on mobile and desktop devices.
        For more details, visit <a href="https://slm.smalldata.io">Beehive Web Platform</a>.
        \n\nDeveloped by:
        \nSmall Data Lab
        \nCornell Tech, NY USA.
        \n\n Beehive Android v1.5

    </string>
    <string name="desc_today_image">Image for today</string>
    <string name="desc_connect_status">Complete all fields</string>

    <!-- connect form -->
    <string name="form_title">Connect to Study</string>
    <string name="form_fn">Firstname</string>
    <string name="form_ln">Lastname</string>
    <string name="form_email">Email</string>
    <string name="form_code">Code</string>
    <string name="form_gender">Gender</string>
    <string-array name="form_gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <!-- connect fragment -->
    <string name="join_study">Join Study</string>
    <string name="exit_study">Exit Study</string>
    <string name="form_reset">Reset</string>
    <string name="desc_check_conn">Check Connection Status</string>
    <string name="check_rt_conn">Check Rescuetime Connection</string>
    <string name="check_cal_conn">Check Calendar Connection</string>
    <string name="invalid_code">Invalid code</string>

    <string name="rt_is_connected">Rescuetime is connected.</string>
    <string name="rt_is_not_connected">Rescuetime not connected.</string>
    <string name="cal_is_connected">Google Calendar is connected.</string>
    <string name="cal_is_not_connected">Google Calendar not connected.</string>
    <string name="desc_how_to_connect">To setup and connect your Rescuetime and Google Calendar accounts,
        simply visit <a href="https://slm.smalldata.io">https://slm.smalldata.io</a> and sign in as a participant
        to automatically connect your accounts.</string>
    <string name="no_network_prompt">No network connection detected.</string>
    <string name="timeout_error_prompt">Experiment is unavailable. Contact Researcher.</string>
    <string name="info_calendar">googleCalendar events appear here.</string>
    <string name="info_rescuetime">rescuetime events appear here</string>
    <string name="need_to_connect">Connect to an experiment by selecting <b>Connect App</b> from the <b>Side Menu</b>.</string>
    <string name="error_checking_conn_status">Error checking connectivity. Please contact researcher.</string>
    <string name="desc_today_text">Today text shows here.</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="home_details_desc">Your daily stats for all connected applications will appear here if the applications are enabled.
        To enable a specific application, go to <b>Settings</b> from the <b>Side Menu</b> and select the application.
    </string>
    <string name="allSettingsPref">allSettingsPref</string>
    <string name="calendarPrefCategory">calendarPrefCategory</string>
    <string name="rescuetimePrefCategory">rescuetimePrefCategory</string>
    <string name="geofencePrefCategory">geofencePrefCategory</string>
    <string name="userTimeWindowCategory">userWindowTimeCategory</string>
    <string name="userInfo">pref_user_info</string>
    <string name="default_user_msg">Hello,</string>
    <string name="yes">Yes</string>
    <string name="title_activity_welcome">welcome</string>

    <!-- strings in code -->
    <string name="bedtime_reminder">bedtime_reminder</string>
    <string name="daily_reminder">daily_reminder</string>
    <string name="weekday_reminder_window_pref">weekday_reminder_window_pref</string>
    <string name="weekend_reminder_window_pref">weekend_reminder_window_pref</string>
    <string name="intentKeySettingsFragment">isSettingsFragment</string>
    <string name="default_window_time">16-19</string>
    <string name="default_window_exact_hours">4pm to 7pm</string>
    <string name="welcome_connecting">Connecting...</string>
    <string name="welcome_no_network">No network connection...</string>
    <string name="welcome_valid_email_needed">Umm... valid email needed.</string>
    <string name="welcome_valid_code_needed">Errm... enter a valid code.</string>
    <string name="weekday_instruction">On <i>weekdays (Mon - Fri)</i>, when do you typically sleep, wakeup? Indicate your most convenient notification window.</string>
    <string name="weekend_instruction">On <i>weekends (Sat, Sun)</i>, when do you typically sleep, wakeup? Indicate your most convenient notification window.</string>
    <string name="tap_to_set_time">tap to set time</string>
    <string name="beehive_about">Beehive app is a mobile companion to Beehive Platform,
        a research system for behavioral researchers to design field experiments that rely on smartphones.
    </string>
    <string name="beehive_participant_msg">
        As a participant, you contribute to the advancement of scientific research that study human behavior
        at a deeper level.
    </string>
    <string name="about_sdl_lab">Beehive is designed by Small Data Lab at Cornell Tech, New York, USA. More info about the lab at https://smalldata.io</string>

</resources>
