<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_dashboard" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_study" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/action_connect" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_about" />
        </menu>
    </item>

</menu>
