<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_user_msg"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_need_to_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/need_to_connect"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_home_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_details_desc"
            android:padding="5dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_calendar"
            android:padding="5dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/tv_rescuetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/info_rescuetime"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <ImageView
            android:id="@+id/iv_today_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/desc_today_image"/>

        <TextView
            android:id="@+id/tv_today_text"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_today_text"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:padding="5dp"
            android:visibility="gone"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </TableLayout>

</ScrollView>